--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *, :root {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 
   font-family: 'Inter', sans-serif;
   font-synthesis: none;
@@ -15,7 +16,17 @@
 main {
   padding: 20px;
   max-width: 640px;
-  margin: 0 auto;
+  margin: 0 auto 64px;
+}
+
+header {
+  margin-top: 64px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #334155;
+}
+
+header h1 {
+  font-size: 30px;
 }
 
 #certas {
