--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  
   font-family: 'Inter', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -27,6 +27,59 @@ header {
 
 header h1 {
   font-size: 30px;
+}
+
+.quiz-item {
+  margin-top: 24px;
+  border: 1px solid #475569;
+  border-radius: 6px;
+}
+
+.quiz-item h3 {
+  padding: 16px 20px;
+}
+
+.quiz-item dl {
+  padding: 20px 24px;
+  display: grid;
+  gap: 8px;
+}
+
+.quiz-item dl dt {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0;
+
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+input {
+  all: unset;
+  border: 1px solid #94a3b8;
+  width: 16px;
+  height: 16px;
+
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input:checked {
+  border: 1px solid #A3E635;
+}
+
+/*pseudo-selector*/
+input:checked:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  
+  background-color: #A3E635;
+  border-radius: 50%;
 }
 
 #certas {
