💄 Add Page Style

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  background-color: #0F172A;
+}
+
 main {
   padding: 20px;
   max-width: 640px;
@@ -27,6 +31,7 @@ header {
 
 header h1 {
   font-size: 30px;
+  color: #F1F5F9;
 }
 
 .quiz-item {
@@ -37,6 +42,7 @@ header h1 {
 
 .quiz-item h3 {
   padding: 16px 20px;
+  color: #E2E8F0;
 }
 
 .quiz-item dl {
@@ -53,11 +59,13 @@ header h1 {
   display: flex;
   align-items: center;
   gap: 8px;
+
+  color: #E2E3F0
 }
 
 input {
   all: unset;
-  border: 1px solid #94a3b8;
+  border: 1px solid #94A3B8;
   width: 16px;
   height: 16px;
 
