--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 main {
   padding: 20px;
-  max-width: 640px;
+  max-width: 840px;
   margin: 0 auto 64px;
 }
 
@@ -34,15 +34,43 @@ header h1 {
   color: #F1F5F9;
 }
 
+#quiz {
+  counter-reset: quiz-item;
+}
+
 .quiz-item {
   margin-top: 24px;
   border: 1px solid #475569;
   border-radius: 6px;
+
+  overflow: hidden;
 }
 
 .quiz-item h3 {
   padding: 16px 20px;
   color: #E2E8F0;
+
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+  background-color: #1E293B;
+}
+
+.quiz-item h3:before {
+  counter-increment: quiz-item;
+  content: counter(quiz-item);
+
+  background-color: #475569;
+  width: 28px;
+  height: 28px;
+  font-size: 12px;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
 }
 
 .quiz-item dl {
@@ -74,6 +102,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 input:checked {
